--- a/Slak/23.md
+++ b/Slak/23.md
@@ -3,18 +3,18 @@
 
 ## The fusion of pagan and christian thought in the fourth and fifth centuries 
 
-### Need of qualifying the patristic attitude.
+### Need of qualifying the patristic attitude
 
 In reading the writings of the Christian fathers one is impressed by the fact that their tone is almost invariably that of the preacher. In estimating therefore the practical effect of their utterances it is well to remember that these are counsels of perfection which were probably often not realized even by those who gave utterance to them. This is not to accuse the fathers of being pharisaical, but to suggest that as both clerics and apologists they were professionally bound to take up an irreproachable position morally and dogmatically. Basil has shown us that the audience who listened to his sermons were still under the spell of Roman amusements, dice, theater, and arena.   
 And the average lay Christian mind was probably more easy-going in its attitude toward magic and superstition than Augustine. Not merely laymen, moreover, but Christian clergy and apologists of the declining Roman Empire might still hold to divination and astrology. It was a time, as has often been remarked, of religious syncretism, of fusion of pagan and Christian thought, when it is not always easy to tell whether the author of an extant writing is Christian or Neo-Platonist or both. Mr. Gwatkin states that "the surface thought" of Constantine's time, "Christian as well as heathen, tended to a vague monotheism which looked on Christ and the sun as almost equally good symbols of the Supreme."  [^524:1] 
 
- [^524:1]: _Cambridge Medieval History_, I, 9. 
+ [^524:1]: _Cambridge Medieval History_, I,9. 
 
 Others believed that astrology was the truth back of all religions.  [^524:2] 
 
  [^524:2]: The Greek work, _Hermippus or Concerning Astrology_, however, can no longer be regarded as an example of Christian belief in astrology at this period, since F.Boll, _Heidelherger Akad. Sitzb_.,  1912, No. 18, has shown it to be a  fourteenth century work of John Katrarios, who makes use of a Greek translation of Albumasar. 
 
-### Plan of this chapter.
+### Plan of this chapter
 
 In this chapter we shall therefore consider some writers of the fourth and fifth century who attest the existence of magic and astrology then, the influence of paganism on Christianity and of Christianity on paganism, and the fusion of Neo-Platonism, Christianity, and astrological theory. This, indeed, we have already done to some extent, as our previous chapters on Neo-Platonism and on the Christian fathers have carried us more or less into those centuries. But now as an offset to Augustine we take up other writers who have not yet been treated: Firmicus, the Latin Christian apologist and the astrologer of the mid- fourth century; Libanius, the Greek sophist of the same century; Macrobius and Synesius, Neo-Platonists writing respectively in Latin and Greek at the beginning of the fifth century, and of whom one was a Christian bishop; and probably in the same century the discussion of spirits by Martianus Capella in Latin and the Pseudo-Dionysius the Areopagite in Greek. Except for Libanius and Synesius, these authors were very influential in medieval Latin learning and might serve as well for an introduction to our following book on The Early Middle Ages as for a conclusion to this. 
 
@@ -42,7 +42,7 @@ Lollianus or Mavortius, who is spoken of in the preface _as ordinario considi de
 
 This involves two considerations, whether the attitude expressed in the two works Is really incompatible and whether the _Mathesis_ was written before or after the _De errore_. 
 
-### Date of the _Mathesis_ .
+### Date of the Mathesis
 
 Mommsen contended that "it is beyond doubt"  [^526:1] that the_Mathesis_ was written between 334 and 337 A.D., relying chiefly upon several apparent mentions of Constantine the Great as still living. 
 
@@ -68,14 +68,14 @@ Yet we are asked to believe - if we accept a date before 337 for the _Mathesis_ 
 
  [^527:2]: Ammianus Marcellinus, XVI, 8, 5, "iubetur Mavortius, tunc praefectus praetorio, vir sublimis constantiae, crimen acri inquisitione spectari." 
 
-### Are the attitudes in Firmicus' two works incompatible?
+### Are the attitudes in Firmicus two works incompatible
 
 Certainly the date of the _Mathesis_ should be determined without any assumption as to what Firmicus' religion was when he wrote it. For, if we regard his attitudes in Mathesis and _De errore_ as incompatible, it will be as difficult to explain how he could write the _De errore_ after having composed the _Mathesis_ as vice versa.   
 After the steadfast affirmation of astrological principles in the _Mathesis_ it is no easier to explain the fierce spirit of intolerance toward paganism in the _De errore_ than it is after the mention of Christ in the _De errore_ to explain the omission of that name in the _Mathesis_. But are the two works really incompatible?  
 My answer is, No. The divergences are such as may be explained by the different character of the two works and the different circumstances under which they were written. _De errore_ is an impassioned polemic very possibly delivered as an oration before the emperors; _Mathesis_ is a learned compilation on a pseudo-scientific subject composed at leisure for a friend with the help of previous treatises on the subject.  
 Why should Firmicus mention Christ in the Mathesis? Does Boethius, after nearly two centuries more of Christian growth and although he wrote a work on the Trinity, mention Christ in The Consolation of Philosophy? Some apparent petty inconsistencies there may be between Firmicus' two works, but if we accept a host of contradictions in Constantine the Great, the first Christian emperor, why balk at some inconsistency in a writer who urges Constantine's children against profane cults? On the other hand, there are some striking correspondences between the _De errore_ and _Mathesis_. 
 
-### _De errore_ is not unfavorable to astrology.
+### De errore is not unfavorable to astrology
 
 It is noteworthy in the first place that in the _De errore_ Firmicus does not attack astrology. But if he had been converted to Christianity since writing the _Mathesis_ and had abandoned the astrological doctrine there expounded, would he have failed to attack the error of that art like Augustine who testified that he had once believed in nativities? It is therefore obvious that Firmicus does not regard astrology as an error even at the time when he is penning the _De errore_ as a Christian apologist. Moreover, his view of nature in the _De errore_ is quite in accord with that of the astrologer, and he manifests the respect for natural science or physica ratio which one would expect from the author of the Ma- thesis. Thus we find him criticizing certain pagan cults as sharply for their incorrect physical notions as he does others for travestying Christian mysteries. In its opening chapters certain _Oriental Religions_ are criticized for exalting each some one of the four elements above the others, and for neglecting that superior control of the world of terrestrial nature in which both Christian and astrologer confided. Another argument against pagan worships is that they include human and immoral elements which cannot be explained as based upon natural law  [^528:1] and the rule of that supreme God 
 
@@ -91,7 +91,7 @@ Furthermore, in the _De errore_ Firmicus' allusions to the planets, which includ
 
  [^529:3]: Ziegler, p. 23. 
 
-### Attitude of both works to the emperors.
+### Attitude of both works to the emperors
 
 It is also worth remarking that in both works Firmicus sets the emperors above the rest of mankind and closely associates them with the celestial bodies and "the supreme God." If in _Mathesis_ he prays for the perpetuation of the line of Constantine and forbids astrologers to make predictions concerning the emperor on the ground that his fate is not subject to the stars but directly to the supreme God, "and inasmuch as the whole surface of the earth is subject to the emperor, he too is reckoned in the number of those gods whom the principal divinity has established to perform and preserve all things":  [^529:4] - if he says this in _Mathesis_, 
 
@@ -105,13 +105,13 @@ in _De errore_ he repeatedly addresses the emperors as "most holy"  [^529:5] and
 
  [^529:6]: Ziegler, pp. 53-4.
 
-### Religious attitude of the _Mathesis_.
+### Religious attitude of the Mathesis
 _ 
 If the author of _De errore_ is not unfavorable to astrology the author of the _Mathesis_ is strongly inclined towards monotheism and decidedly religious. He indignantly repels the accusation that astrology, which teaches that "all our acts are arranged by the divine courses of the stars," draws men away "from the cult of the gods and of religions." 
 
-> "We cause the gods to be feared and worshiped, we demonstrate their might and majesty."  [^530:1] 
+> "We cause the gods to be feared and worshiped, we demonstrate their might and majesty." [^530:1] 
 
- [^530:1]: Kroll et Skutsch, I, 17-18. 
+ [^530:1]: Kroll et Skutsch, I,17-18. 
 
 The passage just quoted and some others are suggestive of polytheism, and Firmicus frequently speaks of the planets as "gods." Probably in this he is reproducing the phraseology and reflecting the attitude of the astrological works which he uses as his authorities and which belong to the period of the pagan past. 
 His apotelesmata, too, or predictions of nativities for various horoscopes, give little or no indication of being especially adapted to a Christian society, although in some other respects they fit his own age.  [^530:2] 
@@ -128,7 +128,7 @@ and who made man the microcosm from the four elements.  [^530:4]
 
 He is prayed to thus: 
 
-### An astrologer's prayer.
+### An astrologer prayer
 
 > "But lest my words be bereft of divine aid and the envy of some hateful man impugn them by hostile attacks, whoever thou art, God, who continuest day after day the course of the heavens in rapid rotation, who perpetuatest the mobile agitation of ocean's tides, who strengthenest earth's solidity in the immovable strength of its foundations, who re freshest with night's sleep the toil of our earthly bodies, who when our strength is renewed returnest the grace of sweetest light, who stirrest all the substance of thy work by the salutary breath of the winds, who pourest forth the waves of streams and fountains in tireless force, who revolvest the varied seasons by sure periods of days: sole Governor and Prince of all, sole Emperor and Lord, whom all the celestial forces serve, whose will is the substance of perfect work, by whose faultless laws all nature is forever adorned and regulated; thou Father alike and Mother of every thing, thou bound to thyself, Father and Son, by one bond of relationship; to Thee we extend suppliant hands, Thee with trembling supplication we venerate; grant us grace to attempt the explanation of the courses of thy stars; thine is the power that somehow impels us to that interpretation. With a mind pure and separated from all earthly thoughts and purged from every stain of sin we have written these books for thy Romans."  [^531:1] 
 
@@ -136,7 +136,7 @@ He is prayed to thus:
 
 Doubtless these words might have been written by a Neo-Platonist or a pagan, but it also seems likely that they were penned by a Christian astrologer. 
 
-### Christian objections to astrology met.
+### Christian objections to astrology met
 
 Firmicus provides not only for divine government of the universe and creation of the world and man, but also for prayer to God and for human free will,  [^531:2] since by the divinity of the soul we are able to resist in some measure the decrees of the stars. 
 
@@ -154,11 +154,11 @@ The human soul is also immortal, a spark of that same divine mind which through 
 
  [^531:5]: _Fasciculus alter libros IV posteriores cum praefatione et indicibus continens_, 1913., I, 17, 2-23. 
 
-### Astrology proved experimentally.
+### Astrology proved experimentally
 
 These and other objections to the art of nativities are the theme to which the first of the eight books of the Mathesis is devoted. Firmicus points out that some of the other objections to astrology do not correctly state the doctrines of that art; others he admits are ingenious arguments which sound well on paper but he insists that if the opponents of astrology, instead of protesting that the influence of the stars at a given instant is incalculable, would put the matter to the test experimentally,  [^532:1] they would soon be convinced of the truth of astrologers' predictions, although he grants that unskilful astrologers sometimes give wrong responses. 
 
- [^532:1]: _Fasciculus alter libros IV posteriores cum praefatione et indicibus continens_, 1913., I, 10, 3
+ [^532:1]: _Fasciculus alter libros IV posteriores cum praefatione et indicibus continens_, 1913., I,10,3
 
 But he insists that persons who have not tested astrology experimentally are unfit to pass upon its merits.  [^532:2] 
 
@@ -178,7 +178,7 @@ The remaining seven books of the _Mathesis_ are given over to the art of horosco
 
  [^533:1]: For a fuller exposition of this quantitative method of source-analysis and the results obtained thereby see Thorndike (1913), pp. 415-35.
 
-### Religion and magic; exorcists.
+### Exorcists
 
 To religion Firmicus gives less space than to politics. There are no clear references to Christianity, but there are few allusions to any particular cults. Firmicus, however, indicates the existence of many cults, speaking five times of the heads of religions, and characterizing men as "those who regard all religions and gods with a certain trepidation," "those devoted to certain religions," "those who cherish the greatest religions," and so on.  
 
@@ -196,19 +196,19 @@ Religious games and contests are mentioned four times: the carving, consecrating
 
  [^534:1]: Kroll et Skutsch, I, 148, 8 and 123, 4.
 
-### Divination.
+### Divination
 
 We are told that men "predict the future either by the divinity of their own minds or by the admonition of the gods or from oracles or by the venerable discipline of some art."  [^534:2] Augurs, aruspices, interpreters of dreams, mathematici (astrologers), diviners, and prophets are mentioned. Once Firmicus alludes to false divination but he usually implies that it is a valid art. 
 
  [^534:2]: Kroll et Skutsch, I, 201, 6. 
 
-### Magic as a branch of learning.
+### Magic as a branch of learning
 
 From religion and divination we easily pass to the occult arts and sciences, and thence to learning and literature in general, from which occult learning is scarcely distinguished in the _Mathesis_. Magicians or magic arts are mentioned no less than seven times in varied relations with religion, philosophy, medicine, and astronomy or astrology, showing that magic was not invariably regarded as evil in that age, and that it was confused and intermingled with the arts and philosophy as well as with the religion of the times,  [^535:1] There are a number of other allusions to secret and illicit arts or writings; these, however, appear to be more unfavorably regarded and probably largely consist of witchcraft and poisoning. 
 
  [^535:1]: Cumont says (_Oriental Religions in Roman Paganism_, p. 188): "But the ancients expressly distinguished 'magic,' which was always under suspicion and dis-approved of, from the legitimate and honorable art for which the name 'theurgy' was invented." This distinction was made by Porphyry and others, and is alluded to by Augustine in the City of God, but it is to be noted that Firmicus does not use the word "theurgy." Cumont also states (p. 179) that in the last period of paganism the name philosopher was finally applied to all adepts in occult science. But in Firmicus, while magic and philosophy are associated in two passages, there are five other allusions to magic and three separate mentions of philosophers. 
 
-### Interest in science.
+### Interest in science
 
 The evidence of the _Mathesis_ suggests that the civilization of declining Rome was at least not conscious of the intellectual decadence and lack of scientific interest so generally imputed to it. We find three descriptions of intellectual pioneers who learn what no master has ever taught them, and one other instance of men who pretend to do so. We also hear of "those learning much and knowing all, also inventors," and of those "learning everything," and "desiring to learn the secrets of all arts." This curiosity, it is true, seems to be largely devoted to occult science, but it also seems plain that mathematics and medicine were important factors in fourth-century culture as well as the rhetorical studies whose role has perhaps been overestimated. Let us compare the statistics. Oratory is mentioned eighteen times, and it is to be noted that literary attainments and learning as well as mere eloquence are regarded as essential in an orator. Men of letters other than orators are found in six passages, and poets in only three. A passage reading "philologists or those skilled in laborious letters" suggests that four instances of the phrase difficiles litter are should perhaps be classed under linguistic rather than occult studies. There are four allusions to grammarians and two to masters of grammar, as against one description of "contentious, contradictory dialecticians, professing that they know what no teaching has acquainted them with, mischievous fellows, but unable to do any effective thinking."  [^536:1] 
 
@@ -222,7 +222,7 @@ Philosophers are mentioned five times; practitioners of medicine, eleven times; 
 
  [^536:3]: Including two mentions of court physicians (archiatri). See _Codex Theod_., Lib. XIII, Tit. 3, passim, for their position. 
 
- ### Diseases in antiquity.
+ ### Diseases in antiquity
  
 Death, injury, and disease loom up large in Firmicus' prospectus for the human race, making us realize the benefits of nineteenth-century medicine as well as of modern peace.  [^536:4] 
 
@@ -235,7 +235,7 @@ No less than 174 passages deal with disease and many of them list two or more il
 Other specific ailments mentioned are as follows: blindness and eye troubles, 10; deafness and ear troubles, 5; impediments of speech, 4; baldness, 1; foul odors, 1; dyspeptics, 4; other stomach complaints, 7; dysentery, 2; liver trouble, 1; jaundice, 1; dropsy, 5; spleen disorders, 1; gonorrhea, 2; other diseases of the urinary bladder and private parts, 6; consumption and lung troubles, 6; hemorrhages, 6; apoplexy, 3 ; spasms, 5; ills attributed to bad or excessive humors, 12; leprosy and other skin diseases, 6; ague, 1; fever, 1; pains in various parts of the body, 6; internal pains and hidden diseases, 9; diseases of women, 5. There remain a large number of vague allusions to ill-health: 21 to debility, 12 to languor, 3 to invalids, and 49 other passages. Only eight passages allude to the cure of disease. Among the methods suggested are cauterizing, incantations, ordinary remedies, and seeking divine aid, which last is mentioned most often.  
 The eleven references to medical practitioners should, however, be recalled here. The predictions as to length of life are inadequate to the drawing of conclusions on that point. 
 
-### Place of Firmicus in the history of astrology.
+### Place of Firmicus in the history of astrology
 
 Firmicus regards his work as a new contribution so far as the Latin-speaking world is concerned.  [^537:1] Not that there had not been previous writing- in Latin on the subject. Fronto 
 
@@ -275,9 +275,14 @@ The astrologer Hephaestion of Thebes, who wrote later in the fourth century, see
 
 ## Libanius
 
+Libanius, born at Antioch (ce 314), died there (c.393), was a pagan Greek rhetorician whose writings embodied many of the traditional ideals and aspirations of elite life in the eastern Roman Mediterranean at a time when some its basic patterns were facing profound transformation. He belonged to a wealthy Antiochene curial family (see decuriones), and after a careful education at home was sent to study in Athens (336–40). Thereafter he taught rhetoric successively at Constantinople (340/1–346) and at Nicomedia. Recalled to Constantinople by Constantius II, he was offered but declined a chair of rhetoric at Athens; in 354 he accepted a salaried chair of rhetoric in Antioch, where he passed the rest of his life. His pupils numbered many distinguished pagans and Christians alike: John Chrysostom and Theodore of Mopsuestia almost certainly, Basil and Gregory  of Nazianzus probably, and Ammianus Marcellinus possibly [^538:31]
+
+[^538:31]: Heather, Peter. "Libanius." Oxford Classical Dictionary. March 07, 2016. Oxford University Press,. Date of access 7 Jul. 2019, [Libanus](https://oxfordre.com/classics/view/10.1093/acrefore/9780199381135.001.0001/acrefore-9780199381135-e-3675) 
+
+
 ### Libanius accused of magic
 
-The writings of Libanius, 314-391 A. D., the sophist and rhetorician, throw some light on the relations between magic and learning in the fourth century, show that sorcery and divination were actually practiced, and largely duplicate impressions already received from Apuleius, Apollonius, and Galen, and a Christian like John Chrysostom as well as just now from Firmicus. Libanius tells us how Bemarchius, a rival of his at Athens, who would have poisoned him if he could, instead circulated reports that he (Bemarchius) was the victim of enchantments, and that Libanius had consulted against him an astrologer who was able to control the stars, so that he could confer benefits upon one man and work sorcery against another. This incidentally is another good illustration of how easily astrology passed from mere prediction of the future to operative magic, and of the essential unity of all magic arts. The mob was aroused against Libanius and a praetor who tried to protect him was ousted and another installed at daybreak who was ready to put Libanius to death. Torture was prepared and Libanius was advised to leave Athens, if he did not wish to die there, and took the advice and left.  [^538:4] 
+The writings of Libanius, 314-391 A.D., the sophist and rhetorician, throw some light on the relations between magic and learning in the fourth century, show that sorcery and divination were actually practiced, and largely duplicate impressions already received from Apuleius, Apollonius, and Galen, and a Christian like John Chrysostom as well as just now from Firmicus. Libanius tells us how Bemarchius, a rival of his at Athens, who would have poisoned him if he could, instead circulated reports that he (Bemarchius) was the victim of enchantments, and that Libanius had consulted against him an astrologer who was able to control the stars, so that he could confer benefits upon one man and work sorcery against another. This incidentally is another good illustration of how easily astrology passed from mere prediction of the future to operative magic, and of the essential unity of all magic arts. The mob was aroused against Libanius and a praetor who tried to protect him was ousted and another installed at daybreak who was ready to put Libanius to death. Torture was prepared and Libanius was advised to leave Athens, if he did not wish to die there, and took the advice and left.  [^538:4] 
 
  [^538:4]:  _De vita sua_, in Libanii sophistae praeliidia oratoria LXXII declamationcs XLV et dissertationes morales, Federicus Morellus regius inter pres e MSS maxime reg. biblioihecae nunc primum edidit idemque Latine vertit . . . ad Henricuni IV regent Christianissimuni, Paris, 1606, II, 15-18. 
  
@@ -294,13 +299,13 @@ He declares that magic is an evil art, and that magicians make no one happy but 
 
 It appears that the magician had asked a delay, saying that he must wait for the moon before he could operate against the plague. Libanius points out that meanwhile the citizens are perishing and that fulfillment of Apollo's oracle will bring instant relief. It would seem, however, that some of the citizens had more faith in the magician than in the god, which supports the oft-made general assertion that the magic arts waxed as pagan religion and its superstitious observances waned. Libanius concludes his oration or imaginary oration with the cutting and heartless witticism that the magician can lose his son more easily than can anyone else, since he will of course still be able to invoke his spirit from the dead. 
 
-### Faith of Libanius in divination.
+### Faith of Libanius in divination
 
 Libanius own faith in divination is not only suggested by the attitude toward the Delphic oracle in the foregoing declamation but is attested by two passages in his autobiography. His great-great-grandfather had so excelled in _mantike_ that he foresaw that his children would die by steel, although they would be handsome and great and good speakers. It also was rumored that a celebrated sophist had predicted many things concerning Libanius himself, which Libanius assures us had since come to pass.  [^540:1] 
 
  [^540:1]: _De vita sua_, Opera, II, 2-3. 
 
-### Magic and astrology in Pseudo-Quintilian declamations.
+### Magic and astrology in Pseudo-Quintilian declamations
 
 Of the same type as Libanius' declamation against the magician is the fourth pseudo-Quintilian declamation in Latin concerning an astrologer's prediction, which we shall later in the twelfth -century find Bernard Silvester enlarging upon in his poem entitled _Mathematicus_. In another of the pseudo-Quintilian declamations the word experimentum is used of a magician's feat. 
 
@@ -309,6 +314,10 @@ Of the same type as Libanius' declamation against the magician is the fourth pse
  [^540:2]: _De vita sua_, X, 196, II, De sepulero incantato.
 
 ## Synesius
+
+Christian Neoplatonist and bishop of Ptolemais  410–13. A pupil of Hypatia at Alexandria, he tended towards oratory and poetry. Nine hymns, 156 letters, and a series of discourses are extant. Of the latter, the Dion is a powerful attack on the contemporary decline of humane culture, whether in the form of exaggerated Christian asceticism or superstitious pagan theurgy. He shared Neoplatonic interest in the occult (e.g. the Chaldaean oracles) and wrote on *divination by dreams (see alchemy). His wife and brother were Christians; he himself was probably a catechumen as early as 399. He spent three years in Constantinople (probably 397/8–400) as ambassador of his city requesting tax reductions, during which he became greatly involved in imperial politics. Much recent scholarship has focused on his De Regno and De Providentia, two works written at this time which both reveal Synesius' involvement with contemporary politics and shed much light on the issues and personalities concerned. Partly because of his ability to deal with government authorities, he was elected bishop of Ptolemais, Libya in 410 [^540:21]
+
+ [^540:21]: Heather, Peter. 2016 _Synesius, of Cyrene, Christian Neoplatonist_, c. 370–413 CE. Oxford Classical Dictionary. 7 Jul. 2019. [Synesius](https://oxfordre.com/classics/view/10.1093/acrefore/9780199381135.001.0001/acrefore-9780199381135-e-6178).
 
 ### Fusion of Christianity and paganism in Synesius of Cyrene.
  
@@ -337,11 +346,11 @@ in addition to the views which we are about to set forth. It has been observed a
 
  [^541:4]: Ibid., p. 1170, citing K.Pr&auml;chter, in _Genethliakon f&uumlr C. Robert_, 1910, p. 244, et seq. 
  
-### His career.
+### His career
 
 The dates of Synesius' birth and death are uncertain. He seems to have been born about 370. His last dateable letter appears to be written in 412, but some give the date of his death as late as 430. Others contend that he did not live to hear of Hypatia's murder. Before he was made bishop he had been to Constantinople on a mission to the emperor to secure alleviation of the oppressive taxation in Cyrene. He had lived in Athens and Alexandria as a student, and in Cyrene on his country estate. Here, if in his fondness for books and philosophy he constituted a survival of the past, in his fondness for the chase and dogs and horses and his repulsion of an invasion of Libyan marauders he was the forerunner of many a medieval feudal bishop. And after he became bishop, he launched an excommunication against the tyrannical prefect Andronicus. 
 
-### His interest in science.
+### His interest in science
 
 But our particular interest is less in his political and more purely literary activities than in his taste for mathematics and science. He knew some medicine and was well acquainted with geometry and astronomy. He believed himself to be the inventor of an astrolabe and of a hydroscope. (densimeter or hydrometer)
 
@@ -360,7 +369,7 @@ Synesius explained that plants and stones are related by bonds of occult sympath
 
  [^543:1]: Περὶ ἐνυπνίων, ch. 3. Καὶ δὴ καὶ θεῷ τινὶ τῶν εἴσω τοῦ κόσμου λίθος ἐνθένδε καὶ βοτάνη προσήκει, οἷς ὁμοιοπαθῶν εἴκει τῇ φύσει καὶ γοητεύεται. In his Praise of Baldness (Φαλάκρας  ἐγκώμιον - False Hedgehog),, ch. 10, Synesius tells how the Egyptians attract demons by magic influences.
  
-### Synesius on divination and astrology.
+### Synesius on divination and astrology
 
 The devotion of Synesius to divination has been already implied. He regarded it as among the noblest of human pursuits.  [^543:2] 
 
@@ -386,7 +395,7 @@ In On the Gift of an Astrolabe he declared that "astronomy" besides being itself
 
  [^543:7]: Πρos Παιόνιον περὶ τοῦ δώρου, ch. 5.
 
-### Synesius as an alchemist.
+### Synesius as an alchemist
 
 Finally, he held the view common among students of magic that knowledge should be esoteric  that its mysteries and marvels should be confined to the few fitted to receive them and that they should be expressed in language incom- prehensible to the vulgar crowd.  [^543:8] 
 
@@ -396,7 +405,14 @@ It is perhaps on this account that one of the oldest extant treatises of Greek a
 
   [^544:1]: 0n Synesius as an alchemist see Berthelot (1885), pp. 65, 188-90; (1889), p. ix. 
 
-## Macrobius.
+## Macrobius
+
+Ambrosius Theodosius Macrobius, (flourished ad 400), Latin grammarian and philosopher whose most important work is the Saturnalia, the last known example of the long series of symposia headed by the Symposium of Plato.  
+Little is known about his life; long identified with Theodosius, proconsul of Africa in 410, he is now thought to be instead the Theodosius who was praetorian praefect (commander of the praetorian guard) of Italy in 430. The Saturnalia, which is dedicated to Macrobius’s son Eustachius, purports to give an account of discussions in private houses on the day before the Saturnalia and on three days of that festival. Most of the conversation is devoted to a careful and respectful reading of the poet Virgil, who is treated as a master of philosophy and religion as well as of rhetoric and grammar. There is much nostalgia for Rome’s pagan past; Christianity, the dominant religion of the 5th century ad, is ignored (except, perhaps, for the name of the boorish character called Evangelus). Macrobius also wrote a commentary on Cicero’s “Somnium Scipionis” (“The Dream of Scipio”) from the De Republica. This is a Neoplatonic work in two books. Of a third work by Macrobius entitled De differentiis et societatibus Graeci Latinique verbi (“On the Differences and Similarities Between Greek and Latin Words”) only fragments remain. [^544:11] 
+
+
+ [^544:11]: The Editors of Encyclopaedia Britannica, _Ambrosius Theodosius Macrobius_ | Roman scholar | Britannica.com. Available from: [July 07, 2019](https://www.britannica.com/biography/Ambrosius-Theodosius-Macrobius).
+
 
 ###  On number, dreams, and stars
 
@@ -432,13 +448,18 @@ In his sole other extant work, the _Saturnalia_, Macrobius displays some belief 
 
   [^545:1]: Glover (1901), p. 178. 
 
-## Martianus Capella.
+## Martianus Capella
 
-The medieval vogue of the fifth century work of Marti- anus Capella, _The Nuptials of Philology and Mercury, and the Seven Liberal Arts_,  [^545:2] has been too frequently demonstrated to require further emphasis here, although it is still a puzzle just why a monastic Christian world should have selected for a text book in the liberal arts a work which contained so much pagan mythology, to say nothing of a marriage ceremony. Nor need we repeat its fulsome allegorical plot and meager learned content. Cassiodorus tells us that the author was a native of Madaura, the birth-place of Apuleius, in North Africa, and he appears to be a Neo-Platonist who has much to say of the sky, stars, and old pagan gods, often, however, by way of brief and vague poetical allusion. 
+b. Carthage; fl. Carthage, ca. a.d. 365–440
+Martianus may have been a secondary school teacher or a rhetorician, and he appears to have pleaded cases as a rhetor or advocate. He was the author of De nuptiis philologiae et Mercurii, the most popular textbook in the Latin West during the early Middle Ages. Cast in the form of an allegory of a heavenly marriage, in which seven bridesmaids present a compendium of each of the liberal arts, this book became the foundation of the medieval curriculum of the trivium (books III–V) and quadrivium (VI–IX). The setting (I–II) became a model of heavenly journeys as late as Dante and contributed greatly to the popularity of the book. Although Martianus understood little more of the subject matter of the disciplines than what he presented in digest form, he was a key figure in the history of rhetoric, education, and science for a thousand years. [^545:11] 
+
+ [^545:11]": "Martianus Capella." Complete Dictionary of Scientific Biography. Encyclopedia.com. [July 7, 2019](https://www.encyclopedia.com/science/dictionaries-thesauruses-pictures-and-press-releases/martianus-capella)
+
+The medieval vogue of the fifth century work of Martianus Capella, _The Nuptials of Philology and Mercury, and the Seven Liberal Arts_,  [^545:2] has been too frequently demonstrated to require further emphasis here, although it is still a puzzle just why a monastic Christian world should have selected for a text book in the liberal arts a work which contained so much pagan mythology, to say nothing of a marriage ceremony. Nor need we repeat its fulsome allegorical plot and meager learned content. Cassiodorus tells us that the author was a native of Madaura, the birth-place of Apuleius, in North Africa, and he appears to be a Neo-Platonist who has much to say of the sky, stars, and old pagan gods, often, however, by way of brief and vague poetical allusion. 
 
  [^545:2]: _De nuptiis philologiae et mercurii et de sept em artibus liberalibus libri novem, Lugduni apud haeredes Simonis Vificentii_, 1539; ed. U.F.Kopp, Frankfurt, 1836; ed. F.Eyssenhardt, Leipzig, 1866. 
 
-### Absence of astrology.
+### Absence of astrology
 
 Of astrology there is very little trace in Capella's work. In a discussion of perfect numbers in the second book the number seven evokes allusion to the fatal courses of the stars and their influence upon the formation of the child in the womb; but the eighth book, which is devoted to the theme of astronomy as one of the liberal arts, is limited to a purely astronomical description of the heavens. 
 
@@ -464,7 +485,11 @@ They finally die as men do, but possess great power of foresight and of inflicti
 
  [^546:1]: In Kopp's edition pp. 202-23 are almost entirely taken up with notes setting forth other passages in the classics concerning such spirits. 
 
-## Dionysius the Areopagite.
+## Dionysius the Areopagite
+
+Prior to his baptism, Dionysius grew up in a notable family in Athens, attended philosophical school at home and abroad, was married and had several children, and was a member of the highest court in Greece, the Areopagus. After his conversion to the True Faith, St. Paul made him Bishop of Athens. Eventually he left his wife and children for Christ and went with St. Paul in missionary travel. He travelled to Jerusalem specifically to see the Most Holy Theotokos and writes of his encounter in one of his books. He was also present at her Dormition. 
+
+ [^546:1]: _Dionysius the Areopagite_ - OrthodoxWiki. Available:  [July 07, 2019](https://orthodoxwiki.org/Dionysius_the_Areopagite).
 
 ### _The Celestial Hierarchy.
 
